--- a/static/visualization/css/visualLeft.css
+++ b/static/visualization/css/visualLeft.css
@@ -1,70 +1,81 @@
 
-.left{
-    background-color: aqua;
-    width: 295px;
+.left {
+  background-color: aqua;
+  width: 295px;
 }
 
 /*Header*/
-.leftHeader li{
-    float: left;
+.leftHeader li {
+  float: left;
 }
 
-.leftHeader a{
-    display: inline-block;
-    height: 30px;
-    padding: 0 45px; 
+.leftHeader a {
+  display: inline-block;
+  height: 30px;
+  padding: 0 45px;
 }
 
-.leftHeader{
-    height: 60px;
-    background-color: antiquewhite;
-    line-height: 60px;
+.leftHeader {
+  height: 60px;
+  background-color: antiquewhite;
+  line-height: 60px;
 }
 
 /*Content*/
-.leftContent{
-    background-color: aquamarine;
-    height:670px;
+.leftContent {
+  background-color: aquamarine;
+  height: 670px;
 }
 
-.panel{
-    height: 610px;
+.panel {
+  height: 610px;
 }
 
-.new{
-    height:60px;
-    line-height: 60px;
-    background-color: white;
+.new {
+  height: 60px;
+  line-height: 60px;
+  background-color: white;
 }
 
-.newButton{
-    font-size: 15px;
-    padding: 8px 30px;
-    margin-left: 18px;
-    border-radius: 10px;
-    color: white;
-    background-color: cornflowerblue
+.newButton {
+  font-size: 15px;
+  padding: 8px 30px;
+  margin-left: 18px;
+  border-radius: 10px;
+  color: white;
+  background-color: cornflowerblue
 }
 
 .base {
-    height: 305px;
-    overflow: scroll;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+  height: 305px;
+  overflow: scroll;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .layout {
-    height: 305px;
-    overflow: scroll;
+  height: 305px;
+  overflow: scroll;
 }
 
 .panelbox {
-    width: 98px;
-    height: 98px;
-    background-color: #c7ddef;
+  width: 98px;
+  height: 98px;
+  background-color: #c7ddef;
+  text-align: center;
+
 }
 
+.panel-img {
+  width: 30%;
+  height: 30%;
+  margin-top: 27px;
+}
+.panelbox-text
+{
+  font-size: 15px;
+}
 
 
 
