--- a/static/visualization/css/visualRight.css
+++ b/static/visualization/css/visualRight.css
@@ -11,7 +11,7 @@
 .rightHeader a{
     display: inline-block;
     height: 30px;
-    padding: 0 30px; 
+    padding: 0 30px;
 }
 
 
@@ -55,6 +55,9 @@
     margin-left: 150px;
 }
 
+.itemActive{
+   border:1px solid aqua;
+}
 
 
 
