--- a/static/visualization/css/visualRight.css
+++ b/static/visualization/css/visualRight.css
@@ -44,17 +44,17 @@
 
 /*Content*/
 .rightContent {
-  background-color: orange;
-  height: 590px;
-  padding-top: 80px;
+
+  height: 100%;
+ width: 100%;
   text-align: left;
 }
 
 .view {
-  width: 320px;
-  height: 520px;
+  width: 100%;
+  height: 100%;
   background-color: white;
-  margin-left: 150px;
+
   display: inline-block;
   text-align: center;
   overflow: auto;
